# filter-pcd

./: 1.ply  2.ply  add_ply_to_rviz.py  filter_realsense_ply.py  get_orbbe_ply.py  get_realsense_ply.py  main.py  point_cloud_from_bag_to_rviz.py  pyproject.toml  remove_green_pnt.py  test_realsense_ply.py  utils.py
